(fix): align login button

--- a/views/style/stylesheet.css
+++ b/views/style/stylesheet.css
@@ -143,6 +143,11 @@ ul, ol{
     margin: 0;
 }
 
+.centrer-flex{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
 /*.carte{
 
@@ -804,8 +809,6 @@ iframe{
         margin-top: 0;
         font-size: 10vw;
         padding-top: 10vh;
-
-
     }
 
     .btn, .btn-index{
@@ -819,6 +822,10 @@ iframe{
     }
     .center{
         text-align: center;
+        margin: auto;
+        display: flex;
+        flex-direction: column;
+        
     }
     #btn-snap{
         padding: 0.75rem 1rem 0.75rem 1rem;
